# vibes

./: .gitignore  README.md
.claude/skills/backend-architecture/: SKILL.md
.claude/skills/clean-architecture/: SKILL.md
ai-course/: .gitignore  Dockerfile  README.md  docker-compose.yml
ai-course/backend/: .env.example  requirements.txt
ai-course/frontend/: index.html
docker-tui/: CLAUDE.md  Cargo.toml  README.md
docker-tui/src/: app.rs  docker.rs  main.rs  ui.rs
lacol/: .env.example  README.md  project.toml  pyproject.toml
lacol/tests/: test_tools.py
lacol/tmp/: hello.rs  main.py  main.rs  notes.txt  plan.md  weather  weather.rs
nimbus/: CLAUDE.md  README.md  docker-compose.yml
nimbus/backend/: .env.example  Cargo.toml
nimbus/backend/crates/nimbus-api/: Cargo.toml
nimbus/backend/crates/nimbus-api/src/: config.rs  lib.rs  main.rs  routes.rs  state.rs
nimbus/backend/crates/nimbus-api/src/dto/: diagram.rs  mod.rs
nimbus/backend/crates/nimbus-api/src/extractors/: mod.rs
nimbus/backend/crates/nimbus-api/src/handlers/: diagram.rs  mod.rs
nimbus/backend/crates/nimbus-api/src/middleware/: error_handler.rs
nimbus/backend/crates/nimbus-api/src/tests/: crud_tests.rs  export_tests.rs  generate_tests.rs  helpers.rs  mod.rs  translate_tests.rs
nimbus/backend/crates/nimbus-app/: Cargo.toml
nimbus/backend/crates/nimbus-app/src/use_cases/: add_diagram_edge.rs  add_diagram_node.rs  create_diagram.rs  delete_diagram.rs  delete_diagram_edge.rs  delete_diagram_node.rs  export_diagram_json.rs  export_docker_compose.rs  export_terraform.rs  fix_diagram.rs  generate_diagram.rs  get_diagram.rs  list_diagrams.rs  mod.rs  modify_diagram.rs  patch_diagram_edge.rs  patch_diagram_node.rs  translate_diagram.rs  update_diagram.rs  validate_diagram.rs
nimbus/backend/crates/nimbus-domain/: Cargo.toml
nimbus/backend/crates/nimbus-domain/src/: errors.rs  lib.rs  test_helpers.rs
nimbus/backend/crates/nimbus-domain/src/entities/: cloud_catalog.rs  diagram.rs  docker_catalog.rs  edge.rs  mod.rs  node.rs  validation.rs
nimbus/backend/crates/nimbus-domain/src/ports/: ai_provider.rs  diagram_repository.rs  mod.rs
nimbus/backend/crates/nimbus-domain/src/services/: docker_compose_service.rs  layout_service.rs  mod.rs  terraform_service.rs  translation_service.rs  validation_service.rs
nimbus/backend/crates/nimbus-infra/: Cargo.toml
nimbus/backend/crates/nimbus-infra/src/: lib.rs
nimbus/backend/crates/nimbus-infra/src/ai/: claude_provider.rs  mod.rs  parser.rs  validator.rs
nimbus/backend/crates/nimbus-infra/src/ai/prompts/: fix_prompt.rs  mod.rs  modify_prompt.rs  system_prompt.rs
nimbus/backend/crates/nimbus-infra/src/persistence/: mod.rs  postgres_diagram_repo.rs
nimbus/backend/crates/nimbus-shared/: Cargo.toml
nimbus/backend/crates/nimbus-shared/src/: events.rs
nimbus/backend/migrations/: 001_initial.sql  002_add_performance_indexes.sql
nimbus/frontend/: angular.json  jest.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.spec.json
python-course-catalogue/: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
python-course-catalogue/backend/: .env.example
python-course-catalogue/frontend/: index.html
ragverse/: .env.example  .gitignore  docker-compose.yml
ragverse/backend/: Dockerfile  pyproject.toml
ragverse/backend/alembic/: env.py
ragverse/backend/app/: config.py  main.py
ragverse/frontend/: Dockerfile  package-lock.json  package.json
weather-app-copilot-claude-code/: .gitignore  CLAUDE.md  README.md  entities.json  home.mov  mempalace.yaml  pyproject.toml
weather-app-copilot-claude-code/.claude/: settings.json
weather-app-copilot-claude-code/backend/: Cargo.toml  README.md
weather-app-copilot-claude-code/backend/src/: error.rs  main.rs
weather-app-copilot-claude-code/backend/src/models/: forecast.rs  weather.rs
weather-app-copilot-claude-code/backend/src/models/weather/: condition.rs  current_response.rs  mod.rs  owm.rs
weather-app-copilot-claude-code/backend/src/routes/: forecast.rs  geocode.rs  geolocate.rs  mod.rs  weather.rs
weather-app-copilot-claude-code/backend/src/services/: cache.rs  mod.rs  personality.rs  weather_api.rs
weather-app-copilot-claude-code/frontend/: README.md  angular.json  package-lock.json  package.json
weather-app-copilot-claude-code/src-tauri/: README.md  tauri.conf.json
(+676 files in other folders)
