[package]
name = "nimbus-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures-core = "0.3"
nimbus-shared = { path = "../nimbus-shared" }
